# retrieval-autoresearch

./: .gitattributes  .gitignore  CLAUDE.md  README.md  analysis.ipynb  build_cache_key.py  design.md  evaluate.py  prepare.py  program.md  pyproject.toml  results.tsv  review.md  train.py
.claude/agents/: experiment-cleanup.md  experiment-design.md  experiment-review.md  experiment-runner.md
docs/: agentic-retrieval-research.md  cpu-experiments-research.md  evaluation-beir.md  ir-results.tsv  ir-survey-202603.md  llm-judge-research.md  plan.md  query-variants-research.md
docs/experiments/exp01-bm25-baseline/: design.md  review.md
docs/experiments/exp02-dense-baseline/: design.md  review.md
docs/experiments/exp03-cross-encoder-rerank/: design.md  review.md
docs/experiments/exp03b-qwen3-rerank-fix/: review.md
docs/experiments/exp04-qwen3-instructions/: design.md  review.md
docs/experiments/exp05-hybrid-rrf/: design.md  review.md
docs/experiments/exp06-colbert/: design.md  review.md
docs/experiments/exp07-qwen3-embed-8b/: review.md
docs/experiments/exp08-colbert-v2/: design.md  review.md
docs/experiments/exp09-bm25-prf-tune/: design.md  review.md
docs/experiments/exp09b-dph-lm-sweep/: review.md
docs/experiments/exp09c-field-index/: design.md
docs/experiments/exp09d-prf-factorial/: design.md
docs/experiments/exp10-backbone-sweep/: design.md  review.md
docs/experiments/exp11-llm-rerank/: design.md  review.md
docs/experiments/exp12-doc-expansion/: design.md
scripts/: install_java.sh
utils/: build_cache_key.py
(+7 files in other folders)
