[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous dense retrieval research on Robust04"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.44.0",
    "datasets>=3.0.0",
    "faiss-gpu-cu12>=1.9.0",
    "pytrec-eval-terrier>=0.5.9",
    "tqdm>=4.60.0",
    "accelerate>=0.34.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "torch==2.9.1",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
